[package]
name = "test_strings"
version = "0.1.0"
edition = "2021"
description = "Sample driver to test win-drvutils-rs strings module"
authors = ["n4r1B"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
win-drvutils-rs = { path = "../../" }
log = { version ="0.4.20", features = [] }
kernel-log = "0.1.2"
widestring = { version = "1.0.2", default-features = false }

[build-dependencies]
winreg = "0.51.0"
failure = {version = "0.1.8", default-features = false, features = ["std"]}

[dependencies.windows-sys]
git = "https://github.com/microsoft/windows-rs.git"
features = [
    "Wdk_System_SystemServices",
    "Win32_Foundation",
]
